--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@
 @import 'components/testimonials.css';
 @import 'components/contact.css';
 @import 'components/prize-card.css';
+@import 'components/cursor.css';
 
 /* Utilities */
 @import 'utilities.css';
